# ccl

./: .gitignore  README.md  pyproject.toml
experiments/: __init__.py  requirements.txt  run_all.py
experiments/data/: .gitignore
experiments/exp_a_error_detection/: analysis.py  exp_a_error_detection.ipynb  run.py
experiments/exp_a_felm/: analysis.py  exp_a_felm.ipynb  run.py
experiments/exp_b_active_passive/: analysis.py  exp_b_active_passive.ipynb  run.py
experiments/exp_c_declining_effort/: analysis.py  exp_c_declining_effort.ipynb  run.py
experiments/exp_d_wildchat_decay/: analysis.py  exp_d_wildchat_decay.ipynb  run.py
experiments/exp_e_critique/: __init__.py  analysis.py  config.py  data.py  generate.py  judge.py  prompts.py  recover.py  run.py
experiments/output/: CCL_Validation_Experiments_Report.md  exp_a_category_stats.csv  exp_a_felm_by_ccl.csv  exp_a_felm_by_domain.csv  exp_a_felm_prompt_stats.csv  exp_a_felm_prompt_test.csv  exp_a_glmm.csv  exp_b_condition_comparison.csv  exp_b_lmm_table.csv  exp_c_session_summary.csv  exp_c_trajectory_slopes.csv  exp_d_decay_by_order.csv  exp_d_decay_by_weeks.csv  exp_e_stage4_critique_report.md  synthesis_table.csv
experiments/shared/: ccl_mappings.py  data_acquisition.py  jsonl_store.py  llm_client.py  plotting.py  stats_utils.py  turn_classifier.py
experiments/synthesis/: cross_experiment.py  run.py  synthesis.ipynb
specs/: CCL_Validation_Results_Summary.md  FELM_Experiment_Specification.md  Statistical_Independence_Fix_Specs.md  ccl-stage4-critique-experiment-spec.md
(+18 files in other folders)
